# M4K

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs
src/asm/: attacks_neon.rs  lib.rs  mod.rs  neon_ops.rs  prelude.rs
src/bitboard/: attacks.rs  lib.rs  magic.rs  mod.rs  position.rs  prelude.rs  types.rs
src/eval/: evaluator.rs  king_safety.rs  material.rs  mod.rs  pawn.rs  pst.rs
src/movegen/: generator.rs  legal.rs  mod.rs  ordering.rs
src/search/: alphabeta.rs  mod.rs  negamax.rs  pvs.rs  quiescence.rs  transposition.rs
src/uci/: commands.rs  mod.rs  protocol.rs
src/utils/: bits.rs  mod.rs  zobrist.rs
