[package]
name = "m4k"
version = "0.1.0"
edition = "2021"
authors = ["Blake Park <blake.r.Park@gmail.com>"]

[lib]
name = "pi5_chess"
path = "src/lib.rs"

[[bin]]
name = "m4k_engine"
path = "src/bin/engine.rs"

[dependencies]
# Core dependencies - add these as needed
arrayvec = "0.7"
static_assertions = "1.1"
once_cell = "1.19"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "fat"              # Full link-time optimization
codegen-units = 1        # Better optimization, slower compile
panic = "abort"          # Smaller binary
strip = true             # Strip symbols
overflow-checks = false  # Remove overflow checks in release

[profile.release.build-override]
opt-level = 3

# Raspberry Pi 5 specific optimizations
[target.aarch64-unknown-linux-gnu]
rustflags = [
    "-C", "target-cpu=cortex-a76",
    "-C", "target-feature=+neon,+fp-armv8,+crc",
]

# [[bench]]
# name = "bitboard_bench"
# harness = false

# [[bench]]
# name = "search_bench"
# harness = false
